homelab-gitops/apps/mealie/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - mealie-dev.thundertest.org
      secretName: mealie-dev-tls
  rules:
    - host: mealie-dev.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 80
